--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
             <meta charset="UTF-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="stylesheet" href="" />
+            <link rel="stylesheet" href="style.css" />
             <title>Barbershop</title>
         </head>
 <body>
@@ -34,7 +34,7 @@
                 <p class="undertext"> hejejejjhejej</p> <br>
                 <p class="learnmore"><a href="lank">LEARN MORE ABOUT US</a></p>
             </div>
-            
+
             <div class="">
                 
             </div>
