--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,6 @@
         </head>
 <body>
     <header>
-        
         <nav class="main-nav">
             <h1>BARBERSHOP</h1>
             <ul>
@@ -30,8 +29,8 @@
             <img src="./img/nathon-oski-EW_rqoSdDes-unsplash.jpg" alt="main-banner" >
             <div class="welcome"> 
                 <p><strong>WELCOME TO BARBERSHOP</strong></p>
-                <h2>WE WILL MAKE YOUR STYLE <span>OF YOUR DREAMS</span></h2>
-                <p class="undertext"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, totam perferendis deleniti, dolorum ipsum non hic a voluptas iste obcaecati vel architecto nemo provident molestiae, voluptatum fuga quis recusandae nihil?</p> <br>
+                <h2>WE WILL MAKE YOUR <span>STYLE OF YOUR DREAMS</span></h2>
+                <p class="undertext"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, <br> totam perferendis deleniti, dolorum ipsum non hic a voluptas iste <br> obcaecati vel architecto nemo provident molestiae, voluptatum <br> fuga quis recusandae nihil?</p> <br>
                 <p class="learnmore"><a href="lank"><strong>LEARN MORE ABOUT US</strong></a></p>
             </div>
 
@@ -91,22 +90,20 @@
             </div>    
         </section>
 
-        <section class="review-main">
-            <div>
-                <h4> TESTIMONIAL</h4>
-            </div>
-            <div></div>
-            <div></div>
-            <div></div>
+        <section class="testimonial">
+                <h4>TESTIMONIAL</h4>
         </section>
  
     </main>
 
-    <footer>
+    <footer class="footer">
+        <div>
         <h5>BARBERSHOP</h5>
         <h5>EXPLORE</h5>
         <h5>INFO</h5>
         <h5>HAVE A QUESTION?</h5>
+        </div>
+
     </footer>
 
 
