--- a/src/index.html
+++ b/src/index.html
@@ -81,27 +81,49 @@
         </section>
 
         <section class="about-barber">
-            <div class="about-main">
-                <img src="./img/delfina-pan-wJoB8D3hnzc-unsplash.jpg">
+            <img src="./img/delfina-pan-wJoB8D3hnzc-unsplash.jpg">
                 <div class="about-text"> 
                     <h4>ABOUT BARBER</h4>
-                    <p> texjandknajd</p>
+                    <p class="smooth-barber"> A SMOOTH BARBER <span>EXPERIENCE IN YOUR TOWN</span></p>
+                    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, unde repellat. Aut deserunt neque explicabo quasi autem, sit enim, voluptatem tempora at mollitia omnis cupiditate ipsam tempore. Animi, temporibus id?</p>
                 </div>
+
+                <div class="calender">
+                    <!--kalender logga <img src="">-->
+                    <p class="number-text"> <span>20</span> YEARS OF <span>EXPERIENCE</span></p>
+
+                </div>
+
             </div>    
         </section>
 
         <section class="testimonial">
                 <h4>TESTIMONIAL</h4>
+                <p>PEOPLE SAY <span>ABOUT OUR BARBER</span> </p>
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
         </section>
  
     </main>
 
     <footer class="footer">
-        <div>
-        <h5>BARBERSHOP</h5>
-        <h5>EXPLORE</h5>
-        <h5>INFO</h5>
-        <h5>HAVE A QUESTION?</h5>
+            <div>
+                <h5>BARBERSHOP</h5>
+                <p> hejejej</p>
+            </div>
+            <div>
+                <h5>EXPLORE</h5>
+                <p> hejejej</p>
+            </div>
+            <div>
+                <h5>INFO</h5>
+                <p> hejejej</p>
+            </div>
+            <div>
+                <h5>HAVE A QUESTION?</h5>
+                <p> hejejej</p>
+            </div>
         </div>
 
     </footer>
