--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
     <footer class="footer">
             <div>
                 <h5>BARBERSHOP</h5>
-                <p> hejejej</p>
+                <p> hejhej </p>
             </div>
             <div>
                 <h5>EXPLORE</h5>
