--- a/src/index.html
+++ b/src/index.html
@@ -151,24 +151,54 @@
 
     </main>
 
-    <footer class="footer">
+    <footer>
+        <div class="footer-innehåll">
             <div class="main-footer">
                 <h5>BARBERSHOP</h5>
-                <p> Far far away beyond the mountains, <br> far from the countries </p>
+                <p> Far far away behind the word of mountains, far from the <br> countries </p>
+                <div class="socialmedia">
+                    <img src="./img/twitter-icon.png" alt="twitter">
+                    <img src="./img/facebook-icon.png" alt="facebook">
+                    <img src="./img/instagram-icon.png" alt="instagram"> <!--Lägg in länk om du vill-->
+                </div>
             </div>
+           
             <div class="main-footer">
                 <h5>EXPLORE</h5>
-                <p> </p>
+                <ul>
+                    <li>> About</li>
+                    <li>> Services</li>
+                    <li>> Gallery</li>
+                    <li>> Blog</li>
+                </ul>
             </div>
+
             <div class="main-footer">
                 <h5>INFO</h5>
-                <p> hejejej</p>
+                <ul>
+                    <li>> Join us</li> <!--Sätt in länk i li-->
+                    <li>> Make appointment</li>
+                    <li>> Privacy & Policy</li>
+                    <li>> Terms & Conditions</li>
+                </ul>
             </div>
+
             <div class="main-footer">
                 <h5>HAVE A QUESTION?</h5>
-                <p> hejejej</p>
+                <div class="contact">
+                    <div class="icons">
+                        <img class="map-icon" src="./img/map.png" alt="map">
+                        <img class="phone-icon" src="./img/telefon.png" alt="phone">
+                        <img class="mail-icon" src="./img/mail.png" alt="mail">
+                    </div>
+                    <p> 203 St Fake Mountain <br> View, San Francisco, <br> California, USA <br><br>
+                     +2 392 3929 210 <br><br><!--Ring länk?-->
+                     info@yourdomain.com
+                    </p> <!--Mejl länk?-->
+                </div>        
             </div>
-        </div>
+        </div>    
+        
 
     </footer>
 
